--- a/package.json
+++ b/package.json
@@ -5,19 +5,17 @@
   "main": "unified_backend.js",
   "scripts": {
     "start": "node unified_backend.js",
-    "dev": "nodemon unified_backend.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "dev": "nodemon unified_backend.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
     "axios": "^1.6.0",
-    "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "express-session": "^1.17.3",
     "connect-mongo": "^5.0.0",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
